# TorqueMeter

./: CMakeLists.txt  Car_Telemetry_Transmitter.ino  README.md  Receiver.ino  Transmitter.ino
COSMOS Config Files/CAR_TEL/: cmd_tlm_server.txt
COSMOS Config Files/CAR_TEL/cmd_tlm/: cmd.txt  tlm.txt
COSMOS Config Files/CAR_TEL/screens/: accelerometer.txt  test_canvas.txt
